--- a/app/src/main/res/layout/activity_listele.xml
+++ b/app/src/main/res/layout/activity_listele.xml
@@ -5,22 +5,22 @@
     android:id="@+id/activity_listele"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="50dp"
     android:layout_gravity="center|top"
+    android:layout_marginTop="50dp"
+    android:orientation="vertical"
     tools:context="com.sabihamumcu.kelimekutusu.Listele">
 
     <EditText
-        android:hint="Aranacak kelimeyi giriniz.."
         android:id="@+id/inputSearch"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:hint="Aranacak kelimeyi giriniz.."/>
 
-    <ListView
-        android:id="@+id/lv"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/word_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
