--- a/app/src/main/res/layout/activity_list_result.xml
+++ b/app/src/main/res/layout/activity_list_result.xml
@@ -8,19 +8,18 @@
     android:layout_gravity="center|top"
     android:layout_marginTop="50dp"
     android:orientation="vertical"
-    tools:context="com.sabihamumcu.kelimekutusu.Listele">
+    tools:context="com.sabihamumcu.kelimekutusu.ListResult">
 
     <EditText
         android:id="@+id/inputSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Aranacak kelimeyi giriniz.."/>
+        android:hint="@string/please_add_searching_word"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/word_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
