--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/word_row"
         android:layout_width="match_parent"
         android:layout_height="38dp"
@@ -30,5 +30,5 @@
             android:padding="8dp"
             android:text="BBB"
             android:textSize="14sp"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
